# create-ti-app

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: build.rs  cli.rs  includes.rs  lib.rs  main.rs
src/includes/src/: KEYPRESS.8xp  MAIN.8xp
template/: ticonfig.json
template/src/: UPDATE.8xp  _APP.8xp
