[package]
name = "ti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"]}
colorful = "0.2.2"
dialoguer = "0.10.2"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"]}
regex = "1.7.1"